# rust-actix-diesel-postgres-boilerplate

./: .env  .gitignore  Cargo.toml  README.md
migrations/2024-06-28-113206_create_users_table/: up.sql
migrations/2025-04-23-065702_create_access_tokens_table/: down.sql  up.sql
src/: main.rs
src/auth/: auth.rs  hash.rs  jwt.rs  mod.rs
src/config/: config.rs  dev.rs  mod.rs  prod.rs
src/helpers/: hash.rs  token.rs
src/middleware/: auth.rs  logging.rs
src/modules/users/: api.rs  db_functions.rs  mod.rs  model.rs
src/repository/: database.rs  schema.rs
