[package]
name = "rust-actix-diesel-postgres-boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
argon2 = "0.5.3"
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.8", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
